--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,17 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "prisma": "^5.18.0"
+    "netlify-cli": "^17.34.0",
+    "netlify-lambda": "^2.0.16",
+    "prisma": "^5.18.0",
+    "serverless-http": "^3.2.0"
   },
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"ts-node src/index.ts"
+    "dev": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
